@@ -496,6 +496,7 @@
                 ofaLedgersPage -> ofaLedgerPage
                 ofaLedgersBookBin -> ofaLedgerBookBin
                 ofaLedgersBookRender -> ofaLedgerBookRender
+                ofaOpeTemplatesPage -> ofaOpeTemplatePage
 
  845 2015-10- 1 have a UserCredentialsBin to be used in DossierLogin
                 and DossierOpen
