@@ -48,7 +48,7 @@ typedef struct _ofaLedgerBookRenderPrivate         ofaLedgerBookRenderPrivate;
 
 typedef struct {
 	/*< public members >*/
-	ofaRenderPage                parent;
+	ofaRenderPage               parent;
 
 	/*< private members >*/
 	ofaLedgerBookRenderPrivate *priv;
@@ -57,7 +57,7 @@ typedef struct {
 
 typedef struct {
 	/*< public members >*/
-	ofaRenderPageClass           parent;
+	ofaRenderPageClass          parent;
 }
 	ofaLedgerBookRenderClass;
 
