@@ -107,6 +107,7 @@
    - ofaLedgersPage class is renamed to ofaLedgerPage (todo #844).
    - ofaLedgersBookBin class is renamed to ofaLedgerBookBin (todo #844).
    - ofaLedgersBookRender class is renamed to ofaLedgerBookRender (todo #844).
+   - ofaOpeTemplatesPage class is renamed to ofaOpeTemplatePage (todo #844).
 
 -----------------------------------------------------------------------
  Version 0.39
